--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<li><a accesskey="5" href="#getapp">Get app</a> <em>(5)</em></li>
 					</ul>
 				</nav>
-			</header>  
+			</header>
 			<article id="welcome">
 				<figure class="mobile-d"><img src="images/home.png" alt="Placeholder" width="352" height="628"></figure>
 				<h2>The social guide.</h2>
@@ -44,7 +44,7 @@
 				</ul>
 			</article>
 			<section id="content" class="a">
-				
+
 				<article>
 					<header class="heading-a">
 						<h3><span class="small">About</span> <span class="strong">Reshaping</span> the social experience.</h3>
@@ -66,7 +66,7 @@
     				<header class="heading-a">
                     	<h3>
                 			<span class="small">Testimonials</span>
-                			What <span class="strong">users</span> are saying about Ecoh.   
+                			What <span class="strong">users</span> are saying about Ecoh.
                 		</h3>
             		</header>
     				<ul class="slider-a testimonials-slider">
@@ -74,18 +74,18 @@
                         	<span class="title">
                     		<span>Chloe</span> Chicago, IL</span>
                 			I use Ecoh whenever my girlfriends and I are looking to go out for the night. We've avoided dead parties
-                			ever since. You can never go wrong with this great app! 
+                			ever since. You can never go wrong with this great app!
                         </li>
                         <li><img src="images/team8.jpg" alt="" width="157" height="157">
                         	<span class="title">
                     		<span>Brittany</span> New York, NY</span>
                 			Ecoh is literally changing the night life and social climate on my college campus! Don't waste time
-                			walking around town to find good parties - use Ecoh, and know which ones are good BEFORE you head out!     
+                			walking around town to find good parties - use Ecoh, and know which ones are good BEFORE you head out!
                         </li>
                         <li><img src="images/team9.jpg" alt="" width="157" height="157">
                         	<span class="title">
                     		<span>Don</span> San Francisco, CA</span>
-                			My coworkers and I use Ecoh whenever we're looking for the right bar scene for our Friday night 
+                			My coworkers and I use Ecoh whenever we're looking for the right bar scene for our Friday night
                 			outings! This app has never let me down, and probably never will!
                         </li>
            			</ul>
@@ -96,19 +96,14 @@
 						<p>We are working to positively transform your social experience.</p>
 					</header>
 					<ul class="gallery-b a">
-						<li><a href="#"><img src="images/colin.png" alt="Placeholder" width="250" height="250"> </a>
-							<div>
-								<h4><span>Colin Austria</span> Chief Executive Officer</h4>
-							</div>
-						</li>
 						<li><a href="#"><img src="images/corey.png" alt="Placeholder" width="250" height="250"> </a>
 							<div>
-								<h4><span>Corry Daguerre</span> President</h4>
+								<h4><span>Corry Daguerre</span> Chief Executive Officer</h4>
 							</div>
 						</li>
 						<li><a href="#"><img src="images/mike.png" alt="Placeholder" width="250" height="250"> </a>
 							<div>
-								<h4><span>Mike Kolenda</span> Vice President</h4>
+								<h4><span>Mike Kolenda</span> Chief Operating Officer</h4>
 							</div>
 						</li>
 						<li><a href="http://www.twitter.com/RyanGuanChiu"><img src="images/ryan.jpg" alt="Placeholder" width="250" height="250"> </a>
@@ -148,7 +143,7 @@
 							<p class="scheme-b">If you want to receive updates from us just pop your email in the box. We think that spam is for jerks. And jerks we are not</p>
 						</fieldset>
 					</form>
-				</article>         
+				</article>
 				<article id="contact">
 					<header class="heading-a">
 						<h3><span class="small">Contact us</span> We'd <span class="strong">love</span> to hear from you.</h3>
